--- a/_events/cleanup20230506.md
+++ b/_events/cleanup20230506.md
@@ -19,3 +19,31 @@ Reach out to [@WNYTrashMob](https://www.instagram.com/wnytrashmob/) or [wnytrash
   <img src="/assets/images/posters/Cleanup-May-6-2023.jpg" alt="Cleanup Poster">
 </figure> 
 
+## RSVP
+
+Please feel free to [RSVP at the Facebook event](https://www.facebook.com/events/5971316449645895) too.
+
+## Community Canvases' WNY Trash Mob would like to say thank you to
+
+- [Westside Park Block Club](https://www.facebook.com/groups/1728245870767705)
+- [Field and Fork Network](https://www.fieldandforknetwork.com)'s
+  [Double Up Food Bucks](https://doubleupnys.com)
+- [WNY Mobile Ops](https://www.wnymobileops.com)
+- [Restoration Society, Inc](https://rsiwny.org)
+- [Save the Michaels](https://savethemichaels.org)
+- [West Side Community Services](http://wscsbuffalo.org/)
+- [Buffalo Board of Block Clubs](
+  https://www.buffalony.gov/734/Buffalo-Board-of-Block-Clubs)
+- [City of Buffalo Dept of Citizen Services](
+  https://www.buffalony.gov/1218/Division-of-Citizen-Services)
+- [Grassroots Gardens of WNY](https://www.grassrootsgardens.org)
+- [Say Yes Buffalo](https://sayyesbuffalo.org)
+- and more!
+
+If your organization is participating on May 6, 2023 and you don't see it here,
+please email [wnytrashmob@gmail.com](mailto:wnytrashmob@gmail.com) to request
+that we add you here.
+
+If you are an individual, family, or group of friends, please show up at
+10:45am on May 6, 2023 to clean, learn, and build community with us.
+
