--- a/_events/cleanup20230506.md
+++ b/_events/cleanup20230506.md
@@ -38,6 +38,8 @@ Please feel free to [RSVP at the Facebook event](https://www.facebook.com/events
   https://www.buffalony.gov/1218/Division-of-Citizen-Services)
 - [Grassroots Gardens of WNY](https://www.grassrootsgardens.org)
 - [Say Yes Buffalo](https://sayyesbuffalo.org)
+- [Queen City Couriers](https://www.qccouriers.com)
+- [SNAP-Ed](https://snaped.fns.usda.gov)
 - and more!
 
 If your organization is participating on May 6, 2023 and you don't see it here,
