--- a/_events/cleanup20231021.md
+++ b/_events/cleanup20231021.md
@@ -1,6 +1,6 @@
 ---
 permalink: /events/cleanup20231021/
-title: "Massachusetts Avenue Park Cleanup"
+title: "Grow Clean Create - Community Cleanup"
 layout: splash
 author_profile: false
 header:
