Update event page

--- a/_events/cleanup20231021.md
+++ b/_events/cleanup20231021.md
@@ -10,7 +10,6 @@ header:
 
 # Clean Up Grant Street on October 21, 2023
 
-
 Meet at The Healing Grounds Co-op (Grant Street at Lafayette Ave) at 11:00am on Saturday, October 21, 2023. Community Canvases' WNY Trash Mob and [Oasis Artist Collaborative](https://www.instagram.com/oasisartistcollab/) are organizing this cleanup with community, food, and local organizations providing education.
 
 Reach out to [@WNYTrashMob](https://www.instagram.com/wnytrashmob/) or [wnytrashmob@gmail.com](mailto:wnytrashmob@gmail.com) with any questions.
@@ -19,18 +18,30 @@ Reach out to [@WNYTrashMob](https://www.instagram.com/wnytrashmob/) or [wnytrash
   <img src="/assets/images/events/cleanup20231021_flyer.jpg" alt="Cleanup Poster">
 </figure> 
 
-{% comment %}
 ## RSVP
 
-Please feel free to [RSVP at the Facebook event](https://www.facebook.com/events/5971316449645895) too.
+Please feel free to [RSVP at the Facebook event](https://www.facebook.com/events/281823711390442) or simply show up.
 
-## Community Canvases' WNY Trash Mob would like to say thank you to
+## Community Canvases' WNY Trash Mob and OASIS Artist Collab would like to say thank you to
 
-- [Westside Park Block Club](https://www.facebook.com/groups/1728245870767705)
-- [Field and Fork Network](https://www.fieldandforknetwork.com)'s
+- [Buffalo Community Fridge](https://www.buffalocommunityfridges.com)
+- [The Healing Grounds Co-op](https://www.facebook.com/TheHealingGroundsCoop)
   [Double Up Food Bucks](https://doubleupnys.com)
-- [WNY Mobile Ops](https://www.wnymobileops.com)
+- [Erie Niagara AHEC](https://www.erieniagaraahec.org)
+- [Field and Fork Network](https://www.fieldandforknetwork.com)'s
 - [Restoration Society, Inc](https://rsiwny.org)
+- [Queen City Couriers](https://www.qccouriers.com)
+- [SNAP-Ed](https://snaped.fns.usda.gov)
+- [La Nova](https://lanova-pizza.com)
+- and more!
+
+If your organization is participating on October 21, 2023 and you don't see it here,
+please email [hy@communitycanvases.org](mailto:hy@communitycanvases.org) to request
+that we add you here.
+
+{% comment %}
+- [WNY Mobile Ops](https://www.wnymobileops.com)
+- [Westside Park Block Club](https://www.facebook.com/groups/1728245870767705)
 - [Save the Michaels](https://savethemichaels.org)
 - [West Side Community Services](http://wscsbuffalo.org/)
 - [Buffalo Board of Block Clubs](
@@ -39,13 +50,6 @@ Please feel free to [RSVP at the Facebook event](https://www.facebook.com/events
   https://www.buffalony.gov/1218/Division-of-Citizen-Services)
 - [Grassroots Gardens of WNY](https://www.grassrootsgardens.org)
 - [Say Yes Buffalo](https://sayyesbuffalo.org)
-- [Queen City Couriers](https://www.qccouriers.com)
-- [SNAP-Ed](https://snaped.fns.usda.gov)
-- and more!
-
-If your organization is participating on October 21, 2023 and you don't see it here,
-please email [wnytrashmob@gmail.com](mailto:wnytrashmob@gmail.com) to request
-that we add you here.
 {% endcomment %}
 
 If you are an individual, family, or group of friends, please show up at
