Update after event

--- a/_events/cleanup20231021.md
+++ b/_events/cleanup20231021.md
@@ -10,7 +10,15 @@ header:
 
 # Clean Up Grant Street on October 21, 2023
 
-Meet at The Healing Grounds Co-op (Grant Street at Lafayette Ave) at 11:00am on Saturday, October 21, 2023. Community Canvases' WNY Trash Mob and [Oasis Artist Collaborative](https://www.instagram.com/oasisartistcollab/) are organizing this cleanup with community, food, and local organizations providing education.
+
+**Please share your experience at our Community Cleanup** [Art Survey](
+https://docs.google.com/forms/d/e/1FAIpQLSfaCyszcBCM1RKUOpB4O_wfKkR5dA8_oXpwG9IQlASn7kwXgQ/viewform
+){: .btn .btn--success .btn--large} [Data Collection](
+https://docs.google.com/forms/d/e/1FAIpQLSe_z314Lh2i1LRe87zYxUFVd2iWS8pYDOx-iyihX5yIL8qbcw/viewform
+){: .btn .btn--warning .btn--large}<br>
+{: .notice--info .maxwidthbox .align-center}
+
+We met at The Healing Grounds Co-op (Grant Street at Lafayette Ave) at 11:00am on Saturday, October 21, 2023. Community Canvases' WNY Trash Mob and [Oasis Artist Collaborative](https://www.instagram.com/oasisartistcollab/) are organizing this cleanup with community, food, and local organizations providing education.
 
 Reach out to [@WNYTrashMob](https://www.instagram.com/wnytrashmob/) or [wnytrashmob@gmail.com](mailto:wnytrashmob@gmail.com) with any questions.
 
