--- a/_events/artshow20231111.md
+++ b/_events/artshow20231111.md
@@ -6,7 +6,19 @@ author_profile: false
 
 ---
 
-### Community Canvases is hosting an Art Opening at Hostel Buffalo with Vecchia Scoulo "Old School" artists from 1:00pm to 4:00pm on Saturday, November 11, 2023. Hostel Buffalo is located at 667 Main Street, Buffalo, NY 14203. More info available at (716) 812-8937
+### Art Opening at Hostel Buffalo from 1:00pm to 4:00pm on Saturday, November 11, 2023
+
+Community Canvases is hosting *Vecchia Scoulo* "Old School" artists at
+Hostel Buffalo, which is located at 667 Main Street, Buffalo, NY 14203.
+
+All artwork will be for sale.
+
+A portion of artwork sales will benefit the work of Community Canvases.
+
+Please enjoy the art, refreshments, live music and community starting at 1pm this Saturday. 
+The artwork will be on display and available for-sale throughout the month.
+
+More info available at (716) 812-8937
 
 <figure style="max-width: 909px" class="align-center">
   <img src="/assets/images/events/artshow20231111_flyer1.jpg" alt="Art Show Poster">
