--- a/_events/artshow20231111.md
+++ b/_events/artshow20231111.md
@@ -8,17 +8,17 @@ author_profile: false
 
 ### Art Opening at Hostel Buffalo from 1:00pm to 4:00pm on Saturday, November 11, 2023
 
-Community Canvases is hosting *Vecchia Scoulo* "Old School" artists at
-Hostel Buffalo, which is located at 667 Main Street, Buffalo, NY 14203.
+All artwork will be for sale at Hostel Buffalo through the end of November.
 
-All artwork will be for sale.
+Community Canvases hosted *Vecchia Scoulo* "Old School" artists at
+Hostel Buffalo, which is located at 667 Main Street, Buffalo, NY 14203.
 
 A portion of artwork sales will benefit the work of Community Canvases.
 
 Please enjoy the art, refreshments, live music and community starting at 1pm this Saturday. 
 The artwork will be on display and available for-sale throughout the month.
 
-More info available at (716) 812-8937
+For more info or to purchase artwork, please call Elaine at (716) 812-8937
 
 <figure style="max-width: 909px" class="align-center">
   <img src="/assets/images/events/artshow20231111_flyer1.jpg" alt="Art Show Poster">
