Add sign up link

--- a/_events/cleanup20240518.md
+++ b/_events/cleanup20240518.md
@@ -15,6 +15,10 @@ Meet at 65 Grant Street on Saturday, May 18, 2024. Community Canvases' WNY Trash
 
 Reach out to [@WNYTrashMob](https://www.instagram.com/wnytrashmob/) or [wnytrashmob@communitycanvases.org](mailto:wnytrashmob@communitycanvases.org) with any questions.
 
+[Sign Up Here](
+    https://docs.google.com/forms/d/e/1FAIpQLSc3ozXzG7hMyERWwemfVLtjEZpUaBLgaLoyCHnu9_IP8tOv5w/viewform?usp=send_form
+){: .btn .btn--large .btn--success}
+
 <figure style="max-width: 727px" class="align-center">
   <img src="/assets/images/events/cleanup20240518_flyer.png" alt="Cleanup Poster">
 </figure> 
