--- a/_events/cleanup20240622.md
+++ b/_events/cleanup20240622.md
@@ -51,3 +51,5 @@ that we add you here.
 If you are an individual, family, or group of friends, please show up at
 9:45am on June 22, 2024 to clean, learn, and build community with us.
 
+**Questions?** Please email Hy [hy@communitycanvases.org](mailto:hy@communitycanvases.org)
+or text/call at [(716) 259-2725](tel:7162592725)
