--- a/_events/cleanup20241019_2.md
+++ b/_events/cleanup20241019_2.md
@@ -51,5 +51,7 @@ that we add you here.
 If you are an individual, family, or group of friends, please show up at
 9:45am on October 19, 2024 to clean, learn, and build community with us.
 
+Please feel free to **[RSVP at the Facebook event](https://www.facebook.com/events/533982422703570)** or please use it to invite your friends!
+
 **Questions?** Please email Hy [hy@communitycanvases.org](mailto:hy@communitycanvases.org)
 or text/call at [(716) 259-2725](tel:7162592725)
