Update June events

--- a/_events/cleanup20250614.md
+++ b/_events/cleanup20250614.md
@@ -15,8 +15,8 @@ Meet in the parking lot at M&T Bank at 130 Grant Street on Saturday, June 14, 20
 
 Reach out to [@WNYTrashMob](https://www.instagram.com/wnytrashmob/) or [wnytrashmob@communitycanvases.org](mailto:wnytrashmob@communitycanvases.org) with any questions.
 
-<figure style="max-width: 900x" class="align-center">
-  <img src="/assets/images/events/cleanup20250614_flyer.jpg" alt="Cleanup Poster">
+<figure style="max-width: 773px" class="align-center">
+  <img src="/assets/images/events/cleanup20250614_flyer.png" alt="Cleanup Poster">
 </figure> 
 
 {% comment %}
