--- a/_events/cleanup20251101.md
+++ b/_events/cleanup20251101.md
@@ -10,15 +10,25 @@ header:
 
 # Clean Up Grant Street on November 1, 2025
 
-On Saturday, November 1, 2025, please join Community Canvases' WNY Trash Mob and West Side Taxpayers and Businesses Association cleanup with community, food, and local organizations providing education.
+On Saturday, November 1, 2025, please join for **Hallow-Clean**, a post-Halloween community cleanup on Grant Street. This event is organized by
+- Community Canvases' WNY Trash Mob
+- West Side Taxpayers and Businesses Association
+- Good Neighbors Credit Union
+- NYS Assemblymember Jonathan Rivera
+- Buffalo Myanmar Water Festival
+- OASIS Artist Collab
+
+with the support of M&T Bank.
+
+This cleanup will feature community, food, and local organizations providing education.
 
 Reach out to [@WNYTrashMob](https://www.instagram.com/wnytrashmob/) or [wnytrashmob@communitycanvases.org](mailto:wnytrashmob@communitycanvases.org) with any questions.
 
-{% comment %}
-<figure style="max-width: 900x" class="align-center">
-  <img src="/assets/images/events/cleanup20241019_flyer.png" alt="Cleanup Poster">
+<figure style="max-width: 971x" class="align-center">
+  <img src="/assets/images/events/cleanup20251101_flyer.png" alt="Cleanup Poster">
 </figure> 
 
+{% comment %}
 ## RSVP
 
 Please feel free to [RSVP at the Facebook event](https://www.facebook.com/events/5971316449645895) too.
